--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,64 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+nav{
+	width: 100%;
+	position: relative;
+	height: 60px;
+	background-color: #2d2d2d;
+}
+nav img{
+	height: 60px;
+	width : 60px;
+}
+nav p{
+	color: white;
+	position: absolute; 
+	top: -8px;
+	left: 80px;
+	font-size: 24px;
+	display: inline-block;
+}
+h1{
+	text-align: left;
+}
+
+.card{
+	padding: 0em;
+	margin : 0;
+	color: white;
+	height: 360px;
+	width: 300px;
+	background-color: #2d2d2d;
+
+}
+.card img{
+	width: 300px;
+	height: 300px;
+}
+
+.cards{
+	display : grid;
+	grid-template-columns: repeat(7, 1fr);
+}
+
+.connect-button{
+	text-decoration: none;
+	padding: 1em;
+	padding-left: 2em;
+	padding-right: 2em;
+	color: #fff;
+	font-weight: bold;
+	background-color: #1db954;
+	border-radius: 40px;
+	border: none;
+	text-transform: uppercase;
+	font-family: "Montserrat", sans-serif;
+}
+
+.content{
+	padding-top: 4em;
+	text-align: center;
+}
