--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ nav p{
 	display: inline-block;
 }
 h1{
+	padding: 1em;
 	text-align: left;
 }
 
@@ -39,19 +40,22 @@ h1{
 	padding: 0em;
 	margin : 0;
 	color: white;
-	height: 360px;
-	width: 300px;
+	height: 460px;
+	width: 400px;
 	background-color: #2d2d2d;
 
 }
+.card p{
+	font-weight: bolder;
+}
 .card img{
-	width: 300px;
-	height: 300px;
+	width: 400px;
+	height: 400px;
 }
 
 .cards{
 	display : grid;
-	grid-template-columns: repeat(7, 1fr);
+	grid-template-columns: repeat(10, 1fr);
 }
 
 .connect-button{
